<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/window_background"
    android:orientation="horizontal"
    android:padding="3dp"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <!-- 学生姓名 -->

    <TextView
        android:id="@id/tv_item_student_name"
        style="@style/item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/text_student_name"
        android:textColor="@color/gray_333"
        android:textSize="14sp" />
    <!-- 学生学号 -->

    <TextView
        android:id="@id/tv_item_student_stunum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/text_student_stunum"
        android:textColor="@color/gray_333"
        android:textSize="14sp" />

    <!-- 性别 -->

    <TextView
        android:id="@id/tv_item_student_sex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/text_student_sex"
        android:textColor="@color/gray_333"
        android:textSize="14sp" />
    <!-- 作品 -->

    <TextView
        android:id="@id/tv_item_student_worksnum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/text_student_worksnum"
        android:textColor="@color/main_color"
        android:textSize="14sp" />
    <!-- 操作 -->

    <TextView
        android:id="@id/tv_item_student_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/text_delete"
        android:textColor="@color/main_color"
        android:textSize="16sp" />

</LinearLayout>