<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/window_background"
        android:cacheColorHint="@color/black"
        android:scrollbars="none"
        android:scrollingCache="false" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/main_color"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@id/iv_register_arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip"
                    android:src="@drawable/icon_arrow_back_white" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/iv_register_arrow_back"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="注册用户"
                    android:textColor="@color/white"
                    android:textSize="20.0sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <EditText
                        android:id="@id/et_register_username"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="12dip"
                        android:background="@drawable/bg_shape_edit"
                        android:hint="@string/hint_register_username"
                        android:inputType="number"
                        android:lines="1"
                        android:padding="5dp" />

                    <EditText
                        android:id="@id/et_register_worknum"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="12dip"
                        android:background="@drawable/bg_shape_edit"
                        android:hint="@string/hint_register_worknum"
                        android:inputType="number"
                        android:lines="1"
                        android:padding="5dp" />

                    <EditText
                        android:id="@id/et_register_phone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="12dip"
                        android:background="@drawable/bg_shape_edit"
                        android:hint="@string/hint_register_phone"
                        android:inputType="number"
                        android:lines="1"
                        android:padding="5dp" />

                    <EditText
                        android:id="@id/et_register_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="12dip"
                        android:background="@drawable/bg_shape_edit"
                        android:hint="@string/hint_register_password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:padding="5dp" />

                    <EditText
                        android:id="@id/et_register_repassword"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="12dip"
                        android:background="@drawable/bg_shape_edit"
                        android:hint="@string/hint_register_repassword"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:padding="5dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@id/tv_register_class_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dip"
                            android:layout_marginRight="5dip"
                            android:layout_marginTop="10dip"
                            android:gravity="center_horizontal"
                            android:text="班级："
                            android:textSize="20.0sp" />

                        <Spinner
                            android:id="@id/sn_register_classname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/tv_register_class_text"
                            android:entries="@array/teach_class" />
                    </RelativeLayout>

                </LinearLayout>

                <Button
                    android:id="@id/btn_register"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_btn_shape_round_green"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10.0dip"
                    android:paddingTop="10.0dip"
                    android:text="@string/btn_register_text"
                    android:textColor="@color/white"
                    android:textSize="20.0dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>